--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -1,6 +1,21 @@
 spring:
   application:
     name: api-collab-dev
+  # base de donnee configuration
+  datasource:
+    url: jdbc:mysql://localhost:3306/collabdevDB
+    username: root
+    password: rootUser
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
 
 
 
@@ -8,6 +23,6 @@ spring:
 server:
   port: 8080
   servlet:
-    context-path: api/collab-dev/v1
+    context-path: /api/collab-dev/v1
 
 
