--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -1,13 +1,17 @@
 spring:
   application:
     name: api-collab-dev
+  # base de donnee configuration
+  datasource:
+    url: jdbc:mysql://localhost:3306/collabdevDB
+    username: root
+    password: Root2025@
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-
-
-# Configuration de Port et context path de API
-server:
-  port: 8080
-  servlet:
-    context-path: api/collab-dev/v1
-
-
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
