--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
   application:
     name: api-collab-dev
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   # base de donnee configuration
   datasource:
     url: jdbc:mysql://localhost:3306/collabdevDB
     username: root
-    password: rootUser
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -17,6 +21,11 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
 
+# Configuration pour le stockage des fichiers
+file:
+  upload-dir: uploads
+
+# Configuration pour la taille maximale des fichiers
 
 
 # Configuration de Port et context path de API
