Nouvel version de mes fonctionnalté changer status du projet et soumettre livrable

--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   # base de donnee configuration
   datasource:
     url: jdbc:mysql://localhost:3306/collabdevDB
-    username: root
-    password: rootUser
+    username: elinkalika
+    password: elinka123
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
