--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -1,17 +1,12 @@
 spring:
-  application:
-    name: api-collab-dev
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
-  # base de donnee configuration
   datasource:
-    url: jdbc:mysql://localhost:3306/collabdevDB
+    url: jdbc:mysql://localhost:3306/collabdevDB?useSSL=false&serverTimezone=UTC
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 10
   jpa:
     hibernate:
       ddl-auto: update
@@ -19,19 +14,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-
-
-# Configuration pour le stockage des fichiers
+        format_sql: true
 file:
-  upload-dir: uploads
-
-# Configuration pour la taille maximale des fichiers
-
-
-# Configuration de Port et context path de API
-server:
-  port: 8080
-  servlet:
-    context-path: /api/collab-dev/v1
-
-
+  upload-dir: /tmp/uploads  # Added property for file uploads
