create tasks to the existing project

--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -37,3 +37,7 @@ server:
   port: 8080
   servlet:
     context-path: /api/collab-dev/v1
+    # Configuration du chemin pour le stockage des fichiers dans le bureau :) douking ^_~ 😎😎
+file:
+  upload-dir: C:/Users/Kalandew20/Desktop/uploads
+
