--- a/api-collab-dev/pom.xml
+++ b/api-collab-dev/pom.xml
@@ -75,6 +75,16 @@
 			<version>5.1.0</version>
 		</dependency>
 
+		<!-- Swagger ui -->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
