--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -39,13 +39,8 @@ server:
     context-path: /api/collab-dev/v1
     # Configuration du chemin pour le stockage des fichiers dans le bureau :) douking ^_~ 😎😎
 file:
-  upload-dir: C:/Users/Kalandew20/Desktop/uploads
-vapid:
-  public:
-    key: TA_PUBLIC_KEY
-  private:
-    key: TA_PRIVATE_KEY
-  subject: mailto:ton@email.com
+  upload-dir: /Users/MacBookAir/desktop
+
 
 logging:
   level:
