--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username:
-    password: joqn jmbw itsg gkde
+    username: gestiondejeuner@gmail.com
+    password: jhnl rinx vbvx ixdr
     properties:
       mail:
         smtp:
