--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/collabdevDB
     username: root
-    password:
+    password: rootUser
 
   # Configuration de JPA / Hibernate
   jpa:
@@ -37,8 +37,7 @@ server:
   servlet:
     context-path: /api/collab-dev/v1
     # Configuration du chemin pour le stockage des fichiers dans le bureau :) douking ^_~ 😎😎
-file:
-  upload-dir: /Users/MacBookAir/desktop
+file.upload-dir: /Users/MacBookAir/desktop
 
 logging:
   level:
