--- a/api-collab-dev/src/main/resources/application.yml
+++ b/api-collab-dev/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/collabdevDB
     username: root
-    password: rootUser
+    password: MySQL
 
   # Configuration de JPA / Hibernate
   jpa:
